# projects-cockpit-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
src/cockpit/: __init__.py  config.py  exceptions.py  gitinfo.py  middleware.py  models.py  scanner.py  search.py  security.py  server.py
tests/: conftest.py  test_config.py  test_gitinfo.py  test_middleware.py  test_scanner.py  test_search.py  test_security.py  test_server.py  test_smoke.py
